--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "phylotree",
+  "name": "phylotree-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.1",
+    "d3": "^7.0.4",
     "d3-fetch": "^3.0.1",
+    "d3-hierarchy": "^3.0.1",
+    "d3-react-axis": "0.0.3",
+    "phylotree": "^1.0.10",
     "react": "^16.14.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^16.14.0",
-    "react-phylotree": "^0.4.3",
     "react-scripts": "4.0.3",
+    "save-svg-as-png": "^1.4.17",
     "underscore": "^1.13.1",
     "web-vitals": "^1.0.1"
   },
