--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "phylotree",
     "phylogenetic"
   ],
-  "version": "1.1.11",
+  "version": "1.1.2",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "files": [
@@ -36,6 +36,7 @@
     "d3-fetch": "^3.0.1",
     "d3-hierarchy": "^3.0.1",
     "d3-react-axis": "0.0.3",
+    "file-saver": "^2.0.5",
     "phylotree": "^1.0.10",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
